Sites/style.css
body {
	background-color: black;
	color: #f1f1f1;
	font-family: Arial;
}

.upper {
	position: fixed;
	top: -20px;
	left: 0px;
	background: rgba(0, 0, 0, 0.5);
	width: 100%;
	padding: 20px;
}

p {
	font-size: 16px;
}

.content {
    position: fixed;
    bottom: 0;
	left: -20px;
    background: rgba(0, 0, 0, 0.5);
    width: 100%;
    padding: 20px;
	text-align: center;
}

button {
	padding: 10px;
	border-radius: 8px;
}

